added other chapter

--- a/sampleThesis.bib
+++ b/sampleThesis.bib
@@ -1,3 +1,23 @@
+@article{levi2006primal,
+  title={Primal-dual algorithms for deterministic inventory problems},
+  author={Levi, Retsef and Roundy, Robin O and Shmoys, David B},
+  journal={Mathematics of Operations Research},
+  volume={31},
+  number={2},
+  pages={267--284},
+  year={2006},
+  publisher={INFORMS}
+}
+
+@inproceedings{buchbinder2008online,
+  title={Online make-to-order joint replenishment model: primal dual competitive algorithms},
+  author={Buchbinder, Niv and Kimbrelt, T and Levi, Retsef and Makarychev, Konstantin and Sviridenko, Maxim},
+  booktitle={Proceedings of the nineteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={952--961},
+  year={2008},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
 @unpublished{GoyalLeviSegev:2013,
 	Author = {V.~Goyal and R.~Levi and D.~Segev},
 	Date-Added = {2013-06-16 04:13:44 +0000},
