--- a/approximate_lp_rm/approximate_lp_rm.tex
+++ b/approximate_lp_rm/approximate_lp_rm.tex
@@ -18,7 +18,7 @@
 \def \varthetahat{{\hat \vartheta}}
 \def \qed{\hfill $\Box$}
 
-\chapter{On the Approximate Linear Programming Approach for Network Revenue Management Problems}
+\chapter{Fast ALP Approach for Network Revenue Management Problems}
 
 \section{Introduction}
 
