--- a/sampleThesis.tex
+++ b/sampleThesis.tex
@@ -55,7 +55,7 @@
 \DeclareMathOperator*{\E}{\mathbb{E}}
 \DeclareMathOperator*{\Var}{Var}
 
-\title {Your Title Goes Here}
+\title {Three Problems in OR}
 \author {Chaoxu Tong}
 \conferraldate {January}{2016}
 \degreefield {Ph.D.}
@@ -68,23 +68,19 @@
 \makecopyright
 
 \begin{abstract}
-Your abstract goes here. Make sure it sits inside the brackets. If not,
-your biosketch page may not be roman numeral iii, as required by the
-graduate school.
+We include three works of different tastes in this thesis. In the first one, we speed up the approximate linear programming approach for network revenue management problem by solving an equivalent but simpler problem. In the second one, we study variant of facility location problem where clients have specific needs related to their types. The third one is quite pratical, we study how to reduce waiting time in appointment system by real-time resource sharing.
 \end{abstract}
 
 \begin{biosketch}
-Chaoxu grew up in a small town, Tongling, Anhui in China.
-He completed his bachelor degree in Math from University of Science and Technology of China
-at 2010 before he comes to Cornell.
+Chaoxu grew up in a small town, Tongling, Anhui in China. He enjoys cooking and movies.
 \end{biosketch}
 
 \begin{dedication}
-This document is dedicated to my parents and my wife.
+To my parents and my wife.
 \end{dedication}
 
 \begin{acknowledgements}
-Your acknowledgements go here. Make sure it sits inside the brackets.
+A big thanks to David for being such a kind and patient advisor. Also thank the passing time for giving me refreshed understanding of myself.
 \end{acknowledgements}
 
 \contentspage
