--- a/sampleThesis.tex
+++ b/sampleThesis.tex
@@ -92,8 +92,8 @@ A big thanks to David for being such a kind and patient advisor. Thanks all frie
 \normalspacing \setcounter{page}{1} \pagenumbering{arabic}
 \pagestyle{cornell} \addtolength{\parskip}{0.5\baselineskip}
 
-%\input{chap1/approximate_lp_rm}
-%\input{chap2/paper}
+\input{chap1/approximate_lp_rm}
+\input{chap2/paper}
 \input{chap3/main}
 %\input{logit_mixture/logit_mixture}
 %\input{other/main}
