--- a/sampleThesis.tex
+++ b/sampleThesis.tex
@@ -70,9 +70,9 @@ We include three works on resource allocation in this thesis. Proper pricing
 helps the system to allocate resource efficiently. However, the computational
 efforts to obtain such prices are not always easy. In airline network revenue
 setting, high-quality bid prices can be obtained via approximate dynamic
-programming approach. However, this leads to an exponential-size linear programming
-which is slow to solve. We show that this large linear programming is actually
-equivalent to a compact linear programming with appealing interpretation
+programming approach. However, this leads to an exponential-size linear program
+which is slow to solve. We show that this large linear program is actually
+equivalent to a compact linear program with appealing interpretation
 by exploiting the minimum-cost network flow structure of this problem.
 Computational experiments indicate that our results can speed up the computation
 for the approximate linear programming approach by a factor ranging between 13 and 135.
