--- a/sampleThesis.tex
+++ b/sampleThesis.tex
@@ -105,11 +105,15 @@ To my parents and my wife.
 \end{dedication}
 
 \begin{acknowledgements}
-A big thanks to David and Shane for being such kind and patient advisors.
+A big thanks to David and Shane for being extremely kind and patient advisors.
 Also, I would like to thank all committee members for providing
 invaluable feedbacks on this thesis.
+I am also deeply grateful for the support from my wife and my parents.
 Thanks all friends I met here at Ithaca for sharing precious time with me.
 Also thank the passing time for giving me refreshed understanding of myself.
+
+The work in this thesis is supported in part by NSF grants CMMI-0825004,
+CMII-0969113, CCF-1526067 and CCF-1017688.
 \end{acknowledgements}
 
 \contentspage
